--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -40,7 +40,10 @@
   'components/button',
   'components/list',
   'components/table',
-  'components/social';
+  'components/social',
+  'components/anim-mouse',
+  'components/slider-nav',
+  'components/burger';
 
 
 // 6. Page-specific styles
