--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,17 @@
 <footer class="footer">
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-xl-1">
+    <div class="row align-items-sm-center">
+      <div class="col-1 d-md-none">
+        <button class="btn-reset burger header__burger">
+          <span class="burger__line"></span>
+          <span class="burger__line"></span>
+          <span class="burger__line"></span>
+        </button>
+      </div>
+      <div class="col-md-2 col-4 offset-3 offset-md-0">
         {{> logo}}
       </div>
-      <div class="col-xl-3 offset-xl-8">
+      <div class="col-xxl-3 col-xl-4 col-md-6 offset-md-4 offset-xxl-7 col-1 offset-3">
         <div class="header__contacts">
           <a href="mailto:hello@digital.tools" class="header__link header__email">
             <svg>
@@ -18,9 +25,14 @@
             </svg>
             8&nbsp;(495)&nbsp;240-83-41
           </a>
+          <a href="tel:84952408341" class="header__link header__link_mobile">
+            <svg>
+              <use xlink:href="assets/img/sprite.svg#mobile-phone"></use>
+            </svg>
+          </a>
         </div>
       </div>
-      <div class="col-xl-5 offset-xl-2">
+      <div class="col-xl-5 offset-xl-2 col-lg-6 col-md-10 offset-md-1">
         <p class="footer__title">Digital.Tools</p>
         <p class="footer__subtitle">Агенство интернет-маркетинга для роста вашего бизнеса</p>
         <p class="footer__subtitle">Привлекаем трафик и конверсии на сайты наших клиентов с 2004 года</p>
@@ -58,7 +70,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-3">
+      <div class="col-xl-3 col-lg-5 col-md-10 offset-lg-0 offset-md-1">
         <div class="footer__round footer-contacts">
           <p class="footer-contacts__caption">Digital.Tools</p>
           <address class="footer-contacts__address">
@@ -67,11 +79,11 @@
         </div>
       </div>
     </div>
-    <div class="row footer__bottom">
-      <div class="col-xl-2">
+    <div class="row footer__bottom mt-5">
+      <div class="col-md-4 col-sm-6 order-1 order-sm-0 col-12">
         <p class="footer__copy">&copy; 2020 Digital.Tools <a href="">Политика конфиденциальности</a></p>
       </div>
-      <div class="col-xl-1 offset-xl-9">
+      <div class="offset-xl-6 col-2 offset-md-6 offset-sm-4 order-0 order-sm-0 col-12">
        {{> social}}
       </div>
     </div>
