--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -13,4 +13,10 @@
       <a href="" class="nav__link">О нас</a>
     </li>
   </ul>
+  <div class="mobile-contacts">
+    <a href="mailto:hello@digital.tools" class="mobile-contacts__email mobile-contacts__link header__email">hello@digital.tools</a>
+    <a href="tel:84952408341" class="mobile-contacts__phone mobile-contacts__link header__phone">8&nbsp;(495)&nbsp;240-83-41</a>
+    {{> social}}
+  </div>
 </nav>
+
