--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -14,18 +14,18 @@
 // }
 
 body {
-  font-size: 0.875rem;
+  font-size: 1rem;
   font-weight: $font-weight-normal;
   font-family: $font-family;
   line-height: 1.5rem;
   color: #000;
 
-  @include media-breakpoint-up(lg) {
-    @include font-size(1rem);
-  }
-  @include r(768) {
-    font-size: 0.8rem;
-  }
+  //@include media-breakpoint-up(lg) {
+  //  @include font-size(1rem);
+  //}
+  //@include r(768) {
+  //  font-size: 0.8rem;
+  //}
 }
 
 
@@ -56,17 +56,37 @@ ul {
   font-weight: 800;
   font-size: 7.5em;
   line-height: 1;
+  @include r(1440) {
+    font-size: 5em;
+  }
+  @include r(1024) {
+    font-size: 4em;
+  }
 }
 .title-h2 {
   font-weight: 800;
   font-size: 5em;
   line-height: 1.474;
   text-transform: uppercase;
+  @include r(1440) {
+    font-size: 4em;
+  }
+  @include r(1024) {
+    position: relative;
+    z-index: 20;
+    font-size: 3em;
+  }
 }
 .title-h3 {
   font-weight: 800;
   font-size: 2.25em;
   line-height: 1.4;
+  @include r(1440) {
+    font-size: 1.5em;
+  }
+  @include r(1024) {
+    font-size: 1em;
+  }
 }
 
 .subtitle {
@@ -74,6 +94,9 @@ ul {
   font-size: 1.25em;
   line-height: 1.45;
   color: $grey;
+  @include r(1024) {
+    font-size: 1.2em;
+  }
 }
 
 
