--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -16,27 +16,46 @@
     height: 100%;
     background-image: url('../img/footer-map.png');
     background-repeat: no-repeat;
+    background-position: 100% 100%;
+    @include r(992) {
+      top: 65%;
+      width: 100%;
+      height: 35%;
+      background-position: center;
+      background-size: cover;
+    }
   }
   &__title {
     margin-top: 80px;
     font-weight: 700;
     font-size: 7.5em;
     line-height: 1.475;
+    @include r(1440) {
+      font-size: 5em;
+    }
   }
   &__subtitle {
     max-width: 630px;
     font-weight: 350;
     font-size: 1.25em;
     line-height: 1.45;
+    @include r(1440) {
+      font-size: 1.1em;
+    }
   }
   &__btn {
     margin-top: 93px;
     @include btnPadding(24,63,19);
   }
   &__copy {
+    position: relative;
+    z-index: 20;
     font-weight: 350;
     font-size: .75em;
     line-height: 1.5;
+    @include r(576) {
+      text-align: center;
+    }
     a {
       color: $green;
       text-decoration: underline;
@@ -77,6 +96,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 90px;
   margin-left: 110px;
   padding: 86px 56px;
   width: 330px;
@@ -88,7 +108,15 @@
   background-position: center;
   background-size: cover;
   filter: drop-shadow(0px 4px 120px rgba(255, 255, 255, 0.15));
-
+@include r(1024) {
+  margin-left: 50px;
+  padding: 66px 46px;
+  width: 280px;
+  height: 280px;
+}
+  @include r(992) {
+    margin: 50px auto;
+  }
   &::before,
   &::after {
     content: '';
@@ -114,6 +142,9 @@
     font-weight: 700;
     font-size: 2.5em;
     line-height: 1.4;
+    @include r(1024) {
+      font-size: 1.5em;
+    }
   }
   &__address {
     margin-top: 15px;
@@ -121,6 +152,9 @@
     font-weight: 350;
     font-size: 1.125em;
     line-height: 1.45;
+    @include r(1024) {
+      font-size: 1em;
+    }
   }
 }
 
