--- a/src/assets/scss/layout/_logo.scss
+++ b/src/assets/scss/layout/_logo.scss
@@ -1,4 +1,11 @@
 .logo {
+  position: relative;
+  z-index: 1000;
+  display: block;
+  max-width: 130px;
+  @include r(768) {
+    margin: 0 auto;
+  }
   &__text {
     font-family: 'Open-Sans', sans-serif;
     position: relative;
