--- a/src/assets/scss/layout/_nav.scss
+++ b/src/assets/scss/layout/_nav.scss
@@ -1,10 +1,37 @@
 .nav {
+  @include r(992) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 50;
+    width: 100vw;
+    height: 100vh;
+    background-color: #131723;
+    transform: translateY(-100%);
+    transition: transform .5s cubic-bezier(0, 0.55, 0.45, 1);
+    &.is-open {
+      transform: translateY(0);
+    }
+  }
   &__list {
     display: flex;
+    @include r(992) {
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: center;
+      width: 100%;
+    }
   }
   &__item {
     &:not(:last-child) {
-      margin-right: 5em;
+      margin-right: 4vw;
+      @include r(1200) {
+        margin-right: 1.5vw;
+      }
+      @include r(992) {
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
     }
   }
   &__link {
@@ -14,6 +41,9 @@
     text-transform: uppercase;
     color: $white;
     transition: color .5s ease-in-out, transform .2s ease-in-out;
+    @include r(992) {
+      font-size: 1.2em;
+    }
     &:focus {
       @include focus
     }
@@ -25,4 +55,20 @@
     }
   }
 
+}
+
+
+.mobile-contacts {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 50px;
+  width: 100%;
+  color: #fff;
+  &__link {
+    display: block;
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
 }
