--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,3 +1,5 @@
+
+
 // hero
 
 .hero {
@@ -7,6 +9,9 @@
   background-size: cover;
   &__title {
     color: $white;
+    @include r(768) {
+      text-align: center;
+    }
     span {
       display: block;
       font-size: .3em;
@@ -21,11 +26,19 @@
     line-height: 1.45;
     text-transform: uppercase;
     color: $green;
+    @include r(768) {
+      max-width: 100%;
+      text-align: center;
+    }
   }
   &__form {
     margin-top: 60px;
     width: 450px;
     max-width: 100%;
+    @include r(768) {
+      margin-right: auto;
+      margin-left: auto;
+    }
   }
   &__input {
     padding: 0 0 2px 0;
@@ -49,11 +62,26 @@
   &__btn {
     @include btnPadding(24, 80, 19);
     margin-top: 85px;
+    @include r(1200) {
+      padding-left: 0;
+      padding-right: 0;
+      width: 100%;
+    }
   }
   &__list {
     color: $white;
     margin-top: 80px;
     margin-left: 50px;
+    gap: 20px;
+    @include r(992) {
+      display: flex;
+      margin-left: 0;
+      flex-wrap:wrap;
+      align-items: flex-start;
+    }
+    @include r(768) {
+      justify-content: space-between;
+    }
   }
   &__text {
     max-width: 280px;
@@ -66,18 +94,37 @@
   }
   &__item {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
+    @include r(992) {
+      flex: 0 0 48%;
+    }
+    @include r(576) {
+      flex: 0 0 100%;
+      justify-content: center;
+    }
     svg {
+      flex-shrink: 0;
       width: 80px;
       height: 80px;
+      @include r(992) {
+        order: -1;
+      }
     }
     &:not(:last-child) {
       margin-bottom: 76px;
     }
     &:nth-child(even) {
       text-align: right;
+      @include r(992) {
+        text-align: left;
+      }
       svg {
         margin-left: 25px;
+        @include r(992) {
+          margin-left: 0;
+          margin-right: 25px;
+        }
       }
     }
     &:nth-child(odd) {
@@ -85,6 +132,13 @@
         margin-right: 25px;
       }
     }
+  }
+  &__mouse {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
 }
 
@@ -134,6 +188,9 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    @include r(1440) {
+      gap: 20px 10px;
+    }
   }
   &__item {
     position: relative;
@@ -143,6 +200,9 @@
     border-radius: 5px;
     color: $green;
     transition: color .5s ease-in-out, background-color .5s ease-in-out;
+    @include r(1440) {
+      padding: 23px 10px;
+    }
     &::after {
       content: '';
       position: absolute;
@@ -205,12 +265,20 @@
       width: 628px;
       background-image: url('../img/dots-left.png');
       z-index: -1;
+      @include r(1200) {
+        left: 0;
+        max-width: 100%;
+      }
     }
     &::after {
       right: -16.66667%;
       top: 0;
       width: 308px;
       background-image: url('../img/dots-right.png');
+      @include r(1200) {
+        right: 0;
+        max-width: 100%;
+      }
     }
   }
   &__subtitle {
@@ -219,9 +287,15 @@
   &__list {
     position: relative;
     z-index: 10;
+    margin-top: 80px;
     display: flex;
     gap: 30px;
-    margin-top: 80px;
+    @include r(1440) {
+      gap: 15px;
+    }
+    @include r(768) {
+      flex-direction: column;
+    }
     &::before,
     &::after {
       content: '';
@@ -233,18 +307,24 @@
     &::before {
       left: -100px;
       bottom: 30px;
+      @include r(1200) {
+        left: 0;
+      }
     }
     &::after {
       right: -100px;
       top: 30px;
+      @include r(1200) {
+        right: 0;
+      }
     }
     & > * {
       z-index: 10;
       position: relative;
     }
   }
+
   &__item {
-    flex: 1 0 calc((100% / 3) - 60px);
     padding: 30px 23px 50px 30px;
     box-shadow: 0px 4px 120px rgba(0, 0, 0, 0.15);
     background-color: $white;
@@ -254,13 +334,26 @@
     align-items: flex-end;
     justify-content: space-between;
     svg {
+      flex-shrink: 0;
       margin-right: 13px;
       width: 75px;
       height: 75px;
+      @include r(992) {
+        width: 50px;
+        height: 50px;
+      }
     }
   }
   &__caption {
     max-width: 207px;
+    flex-shrink: 0;
+    @include r(1440) {
+      max-width: 150px;
+    }
+    @include r(768) {
+      max-width: 80%;
+      font-size: 2em;
+    }
   }
   &__list-inner {
     margin-top: 20px;
@@ -285,8 +378,44 @@
   &__title {
     color: $white;
   }
+  &__decor {
+    position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      height: 308px;
+      background-repeat: no-repeat;
+      opacity: .2;
+    }
+    &::before {
+      left: 8.33333%;;
+      bottom: -65px;
+      width: 628px;
+      background-image: url('../img/dots-left.png');
+      @include r(768) {
+        left: 0;
+        max-width: 100%;
+      }
+    }
+    &::after {
+      right: 8.33333%;;
+      top: 0;
+      width: 308px;
+      background-image: url('../img/dots-right.png');
+      @include r(768) {
+        right: 0;
+        max-width: 100%;
+      }
+    }
+  }
   &__btn {
+    position: relative;
+    z-index: 10;
     @include btnPadding(24,60,19);
+    @include r(1024) {
+      margin-bottom: 20px;
+    }
   }
   &__subtitle {
     text-transform: uppercase;
@@ -308,6 +437,9 @@
     background: linear-gradient(90deg, #006C71 0%, #009F90 49.48%, #006C71 100%);
     box-shadow: 0px 20px 50px rgba(0, 159, 144, 0.35);
     border-radius: 5px;
+    @include r(1440) {
+      margin-top: 20px;
+    }
   }
   &__slogan {
     padding-top: 8px;
@@ -360,6 +492,11 @@
       background-repeat: no-repeat;
     }
   }
+  img {
+    @include r(992) {
+      width: 100%;
+    }
+  }
 }
 
 // how
@@ -368,6 +505,7 @@
   padding: 100px 0 40px;
   background-color: #f8f8f8;
   &__list {
+    position: relative;
     margin-top: 87px;
   }
   &__item {
@@ -376,6 +514,9 @@
     gap: 15px;
     color: $grey;
     transition: color .5s ease-in-out;
+    @include r(768) {
+      justify-content: center;
+    }
     svg {
       width: 78px;
       height: 74px;
@@ -392,6 +533,7 @@
       }
     }
   }
+
   &__caption {
     font-weight: 700;
     font-size: 1.25em;
@@ -405,12 +547,24 @@
   &__img {
     padding: 0;
     margin-left: -15px;
-    margin-right: 15px
+    margin-right: 15px;
+    @include r(768) {
+      display: none;
+    }
+    img {
+      position: sticky;
+      top: 0;
+      left: 0;
+      width: 100%;
+    }
   }
   &__inner {
     position: relative;
     padding-top: 100px;
     padding-bottom: 29px;
+    @include r(768) {
+      padding-top: 30px;
+    }
     &::before {
       content: '';
       position: absolute;
@@ -421,6 +575,9 @@
       border-style: solid;
       border-width: 0 40px 20px 40px;
       border-color: transparent transparent $white transparent;
+      @include r(768) {
+        left: 40%;
+      }
     }
   }
   &__caption {
@@ -452,11 +609,43 @@
 
 .specialize {
   padding: 100px 0 150px;
+  &__decor {
+    position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      height: 308px;
+      background-repeat: no-repeat;
+    }
+    &::before {
+      left: 8.33333%;;
+      bottom: -120px;
+      width: 628px;
+      background-image: url('../img/dots-left.png');
+      @include r(768) {
+        left: 0;
+        max-width: 100%;
+      }
+    }
+    &::after {
+      right: 8.33333%;;
+      top: 0;
+      width: 308px;
+      background-image: url('../img/dots-right.png');
+      @include r(576) {
+        right: 0;
+        max-width: 100%;
+      }
+    }
+  }
   &__subtitle {
     margin-top: 65px;
     text-transform: uppercase;
   }
   &__btn {
+    position: relative;
+    z-index: 10;
     margin-top: 60px;
     @include btnPadding(24,39,19)
   }
@@ -472,6 +661,7 @@
     height: 335px;
     background-image: url('../img/specialilze-ellipce.png');
     background-repeat: no-repeat;
+    background-size: contain;
   }
   &__round {
     margin-right: 105px;
@@ -496,12 +686,13 @@
   &__item {
     display: flex;
     align-items: center;
+
     &:not(:last-child) {
       margin-bottom: 55px;
     }
-    &:nth-child(2),
-    &:nth-child(3) {
-      margin-left: 45px;
+    &:first-child,
+    &:last-child {
+      margin-left: -45px;
     }
     svg {
       margin-right: 15px;
@@ -512,6 +703,13 @@
   &__caption {
     position: relative;
     font-size: 2.5em;
+    z-index: 10;
+    @include r(1440) {
+      font-size: 1.2em;
+    }
+    @include r(1024) {
+      font-size: 1em;
+    }
   }
 }
 
@@ -531,11 +729,38 @@
   background: linear-gradient(90deg, #CB000E 0%, #E70A35 49.48%, #CB000E 100%);
   box-shadow: 0px 10px 25px rgba(255, 3, 51, 0.35);
   border-radius: 50%;
+  @include r(1024) {
+    width: 25px;
+    height: 25px;
+    font-size: 14px;
+    right: -20px;
+  }
 }
 
 .price {
   padding-bottom: 100px;
+  &__decor {
+    position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      height: 308px;
+      background-repeat: no-repeat;
+      right: 8.33333%;;
+      top: 130px;
+      width: 308px;
+      background-image: url('../img/dots-right.png');
+      @include r(768) {
+        right: 0;
+        max-width: 100%;
+      }
+    }
+  }
   &__img {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: $black;
   }
   &__item {
@@ -544,6 +769,14 @@
     align-items: center;
     justify-content: space-between;
     padding: 22px 0;
+    @include r(1024) {
+      flex-wrap: wrap;
+    }
+    @include r(576) {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
     &:first-child {
       &::before {
         content: '';
@@ -555,6 +788,9 @@
         height: 1px;
         background-color: #e5e7eb;
         background-repeat: no-repeat;
+        @include r(576) {
+          width: 100%;
+        }
       }
     }
     &::after {
@@ -567,10 +803,16 @@
       height: 1px;
       background-color: #e5e7eb;
       background-repeat: no-repeat;
+      @include r(576) {
+        width: 100%;
+      }
     }
   }
   &__text {
     flex: 0 0 25%;
+    @include r(1024) {
+      flex: 0 0 48%;
+    }
   }
   &__sum {
     font-weight: bold;
@@ -580,10 +822,21 @@
     text-align: center;
   }
   &__btn {
+    position: relative;
+    z-index: 10;
     @include btnPadding(24,80,19);
     background: linear-gradient(90deg, #FFFFFF 0%, #FFFFFF 49.48%, #FFFFFF 100%);
     box-shadow: 0px 20px 50px rgba(152, 152, 152, 0.35);
     color: $black;
+    @include r(1200) {
+      @include btnPadding(20,50,16)
+    }
+    @include r(1024) {
+      margin-left: auto;
+    }
+    @include r(576) {
+     margin: 0 auto;
+    }
     &:hover {
       color: $white;
       background: linear-gradient(90deg, #CB000E 0%, #E70A35 49.48%, #CB000E 100%);
