--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -10,7 +10,8 @@
 		<title>{{title}}</title>
     <!-- build:css -->
     <link rel="stylesheet" href="{{root}}assets/vendor/css/animate.css">
-    <link rel="stylesheet" href="{{root}}assets/vendor/css/swiper.min.css">
+    <link rel="stylesheet" href="{{root}}assets/vendor/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="{{root}}assets/vendor/css/owl.theme.default.min.css">
 		<link rel="stylesheet" href="{{root}}assets/css/main.css">
 		<!-- endbuild -->
     <link rel="stylesheet" href="{{root}}assets/css/rtl.css">
