--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -2,7 +2,7 @@
 <script src="{{root}}assets/vendor/js/jquery.js"></script>
 <script src="{{root}}assets/vendor/js/popper.js"></script>
 <script src="{{root}}assets/vendor/js/bootstrap.js"></script>
-<script src="{{root}}assets/vendor/js/swiper-bundle.js"></script>
+<script src="{{root}}assets/vendor/js/owl.carousel.min.js"></script>
 <!--<script src="{{root}}assets/js/util/autoPadding.js"></script>-->
 <script src="{{root}}assets/js/util/crossPlatform.js"></script>
 <script src="{{root}}assets/js/{{script}}.js"></script>
