--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -67,6 +67,11 @@
       padding-right: 0;
       width: 100%;
     }
+    @include r(480) {
+      padding-right: 20px;
+      padding-left: 20px;
+      font-size: 18px;
+    }
   }
   &__list {
     color: $white;
@@ -165,6 +170,9 @@
     max-width: 250px;
     background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_26_97)'%3E%3Cpath d='M35.6015 4.01169e-07C34.6495 -0.000403863 33.7231 0.30474 32.9615 0.869566C32.2 1.43439 31.6444 2.22839 31.3782 3.1322C31.1121 4.03602 31.1499 5.00083 31.4858 5.88161C31.8218 6.7624 32.4377 7.51157 33.2412 8.01653L30.371 17.9498C30.2819 17.9441 30.1927 17.9412 30.1034 17.9409C29.1572 17.9399 28.2362 18.2422 27.4785 18.8025L22.176 14.4331C22.427 13.6966 22.4739 12.9071 22.3117 12.1466C22.1496 11.3861 21.7843 10.6825 21.2539 10.109C20.7235 9.53542 20.0473 9.11288 19.2958 8.88531C18.5442 8.65774 17.7448 8.63346 16.9805 8.81499C16.2163 8.99652 15.5152 9.37723 14.9502 9.91751C14.3852 10.4578 13.9769 11.1379 13.7678 11.8871C13.5588 12.6363 13.5565 13.4272 13.7614 14.1775C13.9662 14.9279 14.3707 15.6102 14.9326 16.1536L11.8199 22.3098C11.6836 22.297 11.5467 22.2905 11.4098 22.2902C10.356 22.2889 9.33675 22.6612 8.53692 23.3395C7.73708 24.0179 7.20971 24.9573 7.05054 25.9873C6.89138 27.0173 7.11096 28.0696 7.66943 28.9532C8.2279 29.8368 9.08824 30.493 10.0943 30.8029C11.1003 31.1128 12.1854 31.0558 13.1526 30.6421C14.1197 30.2285 14.9048 29.4856 15.3653 28.5485C15.8259 27.6113 15.9314 26.5419 15.6626 25.5344C15.3939 24.5269 14.7687 23.6481 13.9006 23.0575L16.8421 17.241C17.5567 17.4359 18.3095 17.4487 19.0303 17.2781C19.7512 17.1075 20.4166 16.7591 20.9645 16.2654L26.0984 20.4959C25.7497 21.2556 25.6294 22.0984 25.7517 22.9238C25.8741 23.7492 26.2339 24.5224 26.7883 25.1513C27.3427 25.7801 28.0683 26.238 28.8785 26.4704C29.6888 26.7027 30.5496 26.6998 31.3582 26.4619C32.1668 26.2239 32.8892 25.7611 33.4392 25.1285C33.9891 24.4959 34.3435 23.7202 34.4601 22.894C34.5766 22.0678 34.4504 21.2258 34.0964 20.4685C33.7425 19.7113 33.1758 19.0706 32.4639 18.623L35.3339 8.68979C35.4225 8.69509 35.5115 8.69863 35.6015 8.69863C36.7681 8.69863 37.8868 8.2404 38.7117 7.42474C39.5366 6.60909 40 5.50282 40 4.34931C40 3.1958 39.5366 2.08954 38.7117 1.27388C37.8868 0.45823 36.7681 4.01169e-07 35.6015 4.01169e-07ZM11.4098 28.8142C10.9748 28.8142 10.5496 28.6867 10.1879 28.4477C9.82628 28.2087 9.5444 27.8691 9.37794 27.4718C9.21149 27.0744 9.16794 26.6371 9.25279 26.2153C9.33765 25.7934 9.54711 25.406 9.85468 25.1018C10.1623 24.7977 10.5541 24.5906 10.9807 24.5067C11.4073 24.4228 11.8495 24.4658 12.2514 24.6304C12.6533 24.795 12.9967 25.0737 13.2384 25.4314C13.48 25.789 13.609 26.2094 13.609 26.6395C13.6084 27.2161 13.3765 27.7689 12.9642 28.1765C12.5519 28.5842 11.9929 28.8136 11.4098 28.8142ZM30.1034 24.4649C29.6684 24.4649 29.2432 24.3373 28.8815 24.0984C28.5199 23.8594 28.238 23.5198 28.0715 23.1224C27.9051 22.7251 27.8615 22.2878 27.9464 21.866C28.0313 21.4441 28.2407 21.0566 28.5483 20.7525C28.8559 20.4484 29.2477 20.2413 29.6743 20.1574C30.1009 20.0734 30.5431 20.1165 30.945 20.2811C31.3469 20.4457 31.6903 20.7244 31.932 21.0821C32.1736 21.4397 32.3026 21.8601 32.3026 22.2902C32.302 22.8668 32.0701 23.4195 31.6578 23.8272C31.2455 24.2349 30.6865 24.4642 30.1034 24.4649Z' fill='%23009F90'/%3E%3Crect width='3' height='40' rx='1.5' fill='%23009F90'/%3E%3Crect x='40' y='37' width='3' height='40' rx='1.5' transform='rotate(90 40 37)' fill='%23009F90'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_26_97'%3E%3Crect width='40' height='40' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
+    @include r(325) {
+      font-size: 1.8em;
+    }
     &::after {
       content: '';
       position: absolute;
@@ -175,6 +183,9 @@
       height: 1px;
       width: calc(100% - 343px);
       background-color: $green;
+      @include r(480) {
+        width: calc(100% - 200px);
+      }
     }
   }
 }
@@ -202,6 +213,11 @@
     transition: color .5s ease-in-out, background-color .5s ease-in-out;
     @include r(1440) {
       padding: 23px 10px;
+    }
+    @include r(992) {
+      text-align: center;
+      box-shadow: none;
+      height: 100%;
     }
     &::after {
       content: '';
@@ -243,6 +259,13 @@
   }
   &:hover {
     color: currentColor;
+  }
+  .slider-arrow,
+  .slider-arrow__wrp {
+    @include r(768) {
+      top: 100%;
+      transform: translateY(35%);
+    }
   }
 }
 
@@ -361,7 +384,12 @@
   &__btn {
     display: block;
     margin: 75px auto 0;
-    @include btnPadding(24, 70, 19)
+    @include btnPadding(24, 70, 19);
+    @include r(480) {
+      padding-left: 20px;
+      padding-right: 20px;
+      font-size: 18px;
+    }
   }
 }
 
@@ -517,6 +545,10 @@
     @include r(768) {
       justify-content: center;
     }
+    @include r(576) {
+      flex-wrap: wrap;
+      text-align: center;
+    }
     svg {
       width: 78px;
       height: 74px;
@@ -662,8 +694,15 @@
     background-image: url('../img/specialilze-ellipce.png');
     background-repeat: no-repeat;
     background-size: contain;
+    @include r(480) {
+      height: 245px;
+    }
+    @include r(325) {
+      height: 205px;
+    }
   }
   &__round {
+    position: relative;
     margin-right: 105px;
     padding: 43px 37px 35px;
     width: 160px;
@@ -676,23 +715,90 @@
     color: $white;
     background: linear-gradient(90deg, #006C71 0%, #009F90 49.48%, #006C71 100%);
     border-radius: 50%;
+    @include r(325) {
+      width: 100px;
+      height: 100px;
+      font-size: 12px;
+      padding: 20px;
+    }
+  }
+  &__rings {
+    border: 1px solid $white;
+    position: absolute;
+    top: -15px;
+    left: -15px;
+    bottom: -15px;
+    right: -15px;
+    height: auto;
+    width: auto;
+    border-radius: 50%;
+    animation-duration: 2.0s;
+    animation-name: pulse_1;
+    animation-iteration-count: infinite;
+    &:nth-child(2) {
+      animation-name: pulse_2;
+    }
+    &:nth-child(2) {
+      animation-name: pulse_3;
+    }
+  }
+  @keyframes pulse_1 {
+    from {
+      opacity: 1;
+      transform: scale(0.9, 0.9);
+    }
+
+    to {
+      opacity: 0;
+      transform: scale(1.3, 1.3);
+    }
+  }
+
+  @keyframes pulse_2 {
+    from {
+      opacity: 1;
+      transform: scale(0.8, 0.8);
+    }
+
+    to {
+      opacity: 0;
+      transform: scale(1.5, 1.5);
+    }
+  }
+
+  @keyframes pulse_3 {
+    from {
+      opacity: 1;
+      transform: scale(0.8, 0.8);
+    }
+
+    to {
+      opacity: 0;
+      transform: scale(1.7, 1.7);
+    }
   }
   &__list {
     margin-top: 90px;
     &_second {
       margin-left: -35px;
+      @include r(480) {
+        margin-left: 0;
+        margin-top: 55px;
+      }
     }
   }
   &__item {
     display: flex;
     align-items: center;
-
     &:not(:last-child) {
       margin-bottom: 55px;
     }
     &:first-child,
     &:last-child {
       margin-left: -45px;
+      @include r(576) {
+        margin-left: 0;
+      }
     }
     svg {
       margin-right: 15px;
@@ -709,6 +815,15 @@
     }
     @include r(1024) {
       font-size: 1em;
+    }
+    @include r(480) {
+      font-size: 1.2em;
+    }
+  }
+  &__col {
+    @include r(480) {
+      flex: 0 0 100%;
+      max-width: 100%;
     }
   }
 }
@@ -820,6 +935,9 @@
     line-height: 1.45;
     width: 30%;
     text-align: center;
+    @include r(480) {
+      width: 100%;
+    }
   }
   &__btn {
     position: relative;
@@ -829,14 +947,18 @@
     box-shadow: 0px 20px 50px rgba(152, 152, 152, 0.35);
     color: $black;
     @include r(1200) {
-      @include btnPadding(20,50,16)
+      @include btnPadding(20,50,16);
     }
     @include r(1024) {
       margin-left: auto;
     }
     @include r(576) {
-     margin: 0 auto;
+      margin: 0 auto;
+      padding-left: 20px;
+      padding-right: 20px;
+      font-size: 18px;
     }
+
     &:hover {
       color: $white;
       background: linear-gradient(90deg, #CB000E 0%, #E70A35 49.48%, #CB000E 100%);
