--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -83,7 +83,7 @@
       <div class="col-md-4 col-sm-6 order-1 order-sm-0 col-12">
         <p class="footer__copy">&copy; 2020 Digital.Tools <a href="">Политика конфиденциальности</a></p>
       </div>
-      <div class="offset-xl-6 col-2 offset-md-6 offset-sm-4 order-0 order-sm-0 col-12">
+      <div class="offset-xl-6 col-md-2 col-sm-2 offset-md-6 offset-sm-4 order-0 order-sm-0 col-12">
        {{> social}}
       </div>
     </div>
