--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
           <span class="burger__line"></span>
         </button>
       </div>
-      <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 offset-lg-0 offset-md-2 offset-xl-0 offset-xxl-1  col-1 order-2 order-md-0 offset-3 ">
+      <div class="col-xxl-3 col-xl-4 col-lg-5 col-md-6 offset-lg-0 offset-md-2 offset-xl-0 offset-xxl-1  col-1 order-2 order-md-0 offset-3 header__col">
         <div class="header__contacts">
           <a href="mailto:hello@digital.tools" class="header__link header__email">
             <svg>
