--- a/src/partials/scripts.html
+++ b/src/partials/scripts.html
@@ -5,6 +5,9 @@
 <script src="{{root}}assets/vendor/js/owl.carousel.min.js"></script>
 <!--<script src="{{root}}assets/js/util/autoPadding.js"></script>-->
 <script src="{{root}}assets/js/util/crossPlatform.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.2.2/d3.js"></script>-->
 <script src="{{root}}assets/js/{{script}}.js"></script>
 <script src="{{root}}assets/js/app.js"></script>
 <!-- endbuild -->
