--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -1,5 +1,3 @@
-
-
 // hero
 
 .hero {
@@ -81,7 +79,7 @@
     @include r(992) {
       display: flex;
       margin-left: 0;
-      flex-wrap:wrap;
+      flex-wrap: wrap;
       align-items: flex-start;
     }
     @include r(768) {
@@ -440,7 +438,7 @@
   &__btn {
     position: relative;
     z-index: 10;
-    @include btnPadding(24,60,19);
+    @include btnPadding(24, 60, 19);
     @include r(1024) {
       margin-bottom: 20px;
     }
@@ -455,7 +453,7 @@
     margin-right: 65px;
   }
   &__service {
-    @include btnPadding(4,30,1);
+    @include btnPadding(4, 30, 1);
     font-weight: 800;
     font-size: 1.375em;
     line-height: 1.45;
@@ -498,10 +496,10 @@
 }
 
 .graph {
-    padding: 24px;
+  padding: 24px;
   background-color: $white;
-    box-shadow: 0px 4px 120px #000000;
-    border-radius: 8px;
+  box-shadow: 0px 4px 120px #000000;
+  border-radius: 8px;
   &__caption {
     position: relative;
     font-weight: 700;
@@ -679,7 +677,7 @@
     position: relative;
     z-index: 10;
     margin-top: 60px;
-    @include btnPadding(24,39,19)
+    @include btnPadding(24, 39, 19)
   }
   &__ellipce {
     margin-top: 98px;
@@ -942,12 +940,12 @@
   &__btn {
     position: relative;
     z-index: 10;
-    @include btnPadding(24,80,19);
+    @include btnPadding(24, 80, 19);
     background: linear-gradient(90deg, #FFFFFF 0%, #FFFFFF 49.48%, #FFFFFF 100%);
     box-shadow: 0px 20px 50px rgba(152, 152, 152, 0.35);
     color: $black;
     @include r(1200) {
-      @include btnPadding(20,50,16);
+      @include btnPadding(20, 50, 16);
     }
     @include r(1024) {
       margin-left: auto;
@@ -966,4 +964,218 @@
     }
   }
 }
+
+
+.themes {
+  padding: 100px 0;
+  &__decor {
+    position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      height: 308px;
+      background-repeat: no-repeat;
+      z-index: -1;
+    }
+    &::before {
+      left: 8.33333%;;
+      bottom: -65px;
+      width: 628px;
+      background-image: url('../img/dots-left.png');
+      @include r(768) {
+        left: 0;
+        max-width: 100%;
+      }
+    }
+    &::after {
+      right: 8.33333%;;
+      top: 0;
+      width: 308px;
+      background-image: url('../img/dots-right.png');
+      @include r(768) {
+        right: 0;
+        max-width: 100%;
+      }
+    }
+  }
+  &__subtitle {
+    margin-top: 65px;
+    text-transform: uppercase;
+  }
+  &__btn {
+    @include btnPadding(24, 39, 19);
+  }
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 37px 30px;
+    margin-top: 70px;
+  }
+  &__item {
+    position: relative;
+    flex: 0 0 calc((100% - 2 * 30px) / 3);
+  }
+  &__caption {
+    font-weight: 800;
+    font-size: 1.625em;
+    line-height: 1.9;
+    background-color: $green;
+    color: $white;
+    text-align: center;
+  }
+  &__icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    svg {
+      max-width: 40px;
+      max-height: 35px;
+    }
+  }
+  &__round {
+    position: absolute;
+    top: -20px;
+    right: -20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: linear-gradient(90deg, #CB000E 0%, #E70A35 49.48%, #CB000E 100%);
+    box-shadow: 0px 10px 25px rgba(255, 3, 51, 0.35);
+    border-radius: 50%;
+    svg {
+      width: 19px;
+      height: 16px;
+    }
+  }
+}
+
+
+//team
+
+.team {
+  padding: 100px 0;
+  &__decor {
+    position: relative;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      height: 308px;
+      background-repeat: no-repeat;
+      z-index: -1;
+    }
+    &::before {
+      left: 8.33333%;;
+      bottom: -65px;
+      width: 628px;
+      background-image: url('../img/dots-left.png');
+      @include r(768) {
+        left: 0;
+        max-width: 100%;
+      }
+    }
+    &::after {
+      right: 8.33333%;;
+      top: 0;
+      width: 308px;
+      background-image: url('../img/dots-right.png');
+      @include r(768) {
+        right: 0;
+        max-width: 100%;
+      }
+    }
+  }
+  &__btn {
+    @include btnPadding(24, 54, 19);
+  }
+  &__subtitle {
+    margin-top: 80px;
+  }
+  &__list {
+    position: relative;
+    margin-top: 80px;
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100px;
+      height: 3px;
+      background-color: $green;
+    }
+    &::before {
+      left: -100px;
+      top: 35%;
+      @include r(1200) {
+        left: 0;
+      }
+    }
+    &::after {
+      right: -100px;
+      top: 30px;
+      @include r(1200) {
+        right: 0;
+      }
+    }
+  }
+  &__img {
+    //filter: drop-shadow(0px 4px 120px rgba(0, 0, 0, 0.15));
+  }
+  &__caption {
+    margin-top: 20px;
+    max-width: 200px;
+    font-size: 2.5em;
+    line-height: 1.25;
+  }
+  &__descr {
+    margin-top: 10px;
+  }
+  &__arrow {
+    position: absolute;
+    top: 20%;
+    right: -8.33333%;
+    transform: translateY(-20%);
+    &_next {
+      &::before {
+        content: 'больше';
+        display: block;
+        transform: translate(30px, 20px);
+        color: $black;
+        font-family: $font-family;
+        font-weight: 300;
+        font-size: 1.25em;
+        line-height: 1.45;
+      }
+    }
+  }
+}
+
+.canvas {
+  position: absolute;
+  height: 100%;
+}
+.demo-canvas {
+  max-width: 1890px;
+}
+
+//#graph {
+//  position: absolute;
+//  height: 500px;
+//  width: 100vw;
+//  circle {
+//    // opacity: 0.6;
+//    &:hover {
+//      fill: #fafafa;
+//    }
+//  }
+//  line {
+//    fill: none;
+//    stroke: #fafafa;
+//    stroke-width: 1px;
+//    // opacity: 0.1;
+//  }
+//}
+
 
