--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer">
+  {{> canvas}}
   <div class="container">
     <div class="row align-items-sm-center">
       <div class="col-1 d-md-none">
