--- a/src/assets/scss/pages/_home.scss
+++ b/src/assets/scss/pages/_home.scss
@@ -191,8 +191,13 @@
 // service
 
 .service {
+  position: relative;
   padding: 100px 0;
   background-color: #001516;
+  background-image: url('../img/service-bg.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   &__list {
     display: flex;
     flex-wrap: wrap;
@@ -1005,6 +1010,9 @@
   }
   &__btn {
     @include btnPadding(24, 39, 19);
+    @include r(768) {
+      margin-top: 30px;
+    }
   }
   &__list {
     display: flex;
@@ -1015,6 +1023,9 @@
   &__item {
     position: relative;
     flex: 0 0 calc((100% - 2 * 30px) / 3);
+    @include r(992) {
+      margin: 20px 25px;
+    }
   }
   &__caption {
     font-weight: 800;
@@ -1045,6 +1056,7 @@
     background: linear-gradient(90deg, #CB000E 0%, #E70A35 49.48%, #CB000E 100%);
     box-shadow: 0px 10px 25px rgba(255, 3, 51, 0.35);
     border-radius: 50%;
+
     svg {
       width: 19px;
       height: 16px;
@@ -1090,6 +1102,10 @@
   }
   &__btn {
     @include btnPadding(24, 54, 19);
+    @include r(1200) {
+      padding-right: 40px;
+      padding-left: 40px;
+    }
   }
   &__subtitle {
     margin-top: 80px;
@@ -1137,6 +1153,10 @@
     top: 20%;
     right: -8.33333%;
     transform: translateY(-20%);
+    @include r(1200) {
+      top: -75px;
+      right: 0;
+    }
     &_next {
       &::before {
         content: 'больше';
@@ -1147,6 +1167,9 @@
         font-weight: 300;
         font-size: 1.25em;
         line-height: 1.45;
+        @include r(768) {
+          transform: translate(3px, 10px);
+        }
       }
     }
   }
@@ -1154,28 +1177,10 @@
 
 .canvas {
   position: absolute;
-  height: 100%;
+  height: 100vh;
 }
 .demo-canvas {
   max-width: 1890px;
 }
-
-//#graph {
-//  position: absolute;
-//  height: 500px;
-//  width: 100vw;
-//  circle {
-//    // opacity: 0.6;
-//    &:hover {
-//      fill: #fafafa;
-//    }
-//  }
-//  line {
-//    fill: none;
-//    stroke: #fafafa;
-//    stroke-width: 1px;
-//    // opacity: 0.1;
-//  }
-//}
 
 
