--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -17,6 +17,7 @@ $info:                          $gray-900;
 $warning:                       $primary;
 $danger:                        $red;
 $black:                         #000000;
+$black-2:                       #39322b;
 $white:                         #ffffff;
 $decor-black:                   #151a28;
 
