--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" data-color="remove">
   {{> canvas}}
   <div class="container">
     <div class="row align-items-sm-center">
