--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -4,6 +4,7 @@
     padding-left: 12px;
     font-weight: 350;
     line-height: 1.5;
+    display: inline-block;
     cursor: pointer;
     transition: color .3s ease-in-out, text-decoration .3s ease-in-out;
     &:not(:last-child) {
