--- a/src/assets/scss/layout/_logo.scss
+++ b/src/assets/scss/layout/_logo.scss
@@ -3,6 +3,7 @@
   z-index: 1000;
   display: block;
   max-width: 130px;
+  transition: transform .5s ease-in-out;
   @include r(768) {
     margin: 0 auto;
   }
@@ -14,6 +15,7 @@
     font-size: 1.25em;
     line-height: 1.35;
     color: $white;
+    transition: color .5s ease-in-out;
     @include r(480) {
       font-size: 4vw;
     }
