add case mdm page

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -86,6 +86,9 @@ img {
   &_w-center {
     justify-content: center;
   }
+  &_w-sb {
+    justify-content: space-between;
+  }
   &_all-center{
     align-items: center;
     justify-content: center;
@@ -96,6 +99,9 @@ img {
   }
 }
 
+.table {
+
+}
 
 
 
